# mesonpep517examples

./: README.md  default.nix  meson.build  pyproject.toml  setup.py
greetpkg/: __main__.py  greet.c  meson.build
